--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -6,86 +6,101 @@
   }
   .navbar-nav {
     .nav-link {
-        color: #00000a;
-        font-size: 14px;
-      
-        &:hover{
-          color: $black;
-          font-weight: 500;
-        }
+      color: #00000a;
+      font-size: 14px;
+
+      &:hover {
+        color: $black;
+        font-weight: 500;
       }
     }
   }
-  
-.navbar-collapse {
-    left: 0rem;
-    padding: 14px;
-    margin-top: 2.3rem;
-    width: 100vw;
-    position: absolute;
-    background-color: rgba(226, 227, 225, 0.92);
-    z-index: 2;
+}
 
-    @media screen and (min-width: 1024px) {
-        left: 0rem;
-        padding: 0px;
-        width: 100%;
-        justify-content: space-between;
-        position: relative;
-        background-color: initial;
-        z-index: 0;
-    }
+.navbar-collapse {
+  left: 0rem;
+  padding: 14px;
+  margin-top: 2.3rem;
+  width: 100vw;
+  position: absolute;
+  background-color: rgba(226, 227, 225, 0.92);
+  z-index: 2;
+
+  @media screen and (min-width: 1024px) {
+    left: 0rem;
+    padding: 0px;
+    width: 100%;
+    justify-content: space-between;
+    position: relative;
+    background-color: initial;
+    z-index: 0;
   }
+}
 
 .nav-bar {
-    display: grid;
-    grid-template-columns: 157px 1fr;
-    justify-content: center;
-    align-items: center;
+  display: grid;
+  grid-template-columns: 157px 1fr;
+  justify-content: center;
+  align-items: center;
 
-    .logo {
-      width: 45%;
+  .logo {
+    width: 45%;
 
-      @media screen and (min-width: 450px) {
-        width: 60%;
-      }
+    @media screen and (min-width: 450px) {
+      width: 60%;
+    }
 
-      @media screen and (min-width: 1024px) {
-        margin-top: 2rem;
-        width: 65%;
+    @media screen and (min-width: 1024px) {
+      margin-top: 2.5rem;
+      width: 65%;
+      margin-left: 2rem;
+    }
+  }
+
+  .nav-buttons {
+    position: relative;
+    flex-direction: column-reverse;
+    padding-top: 2rem;
+
+    .schedule {
+      color: $base-font-color;
+      padding-top: 13px;
+      margin-right: 20px;
+
+      &::after {
+        content: " ";
+        background-image: url("/chargebee-assignment/assets/icon/purple-arrow.svg");
+        background-size: contain;
+        background-repeat: no-repeat;
+        position: relative;
+        padding: 0px 6px;
+        top: 5px;
+        left: 8px;
       }
     }
 
-    .nav-buttons {
-      position: relative;
-      flex-direction: column-reverse;
-      place-items: left;
-      padding-top: 2rem;
+    .log-in {
+      background-color: $base-font-color;
+      border: none;
+      color: #fff;
+      font-family: "Basis Grotesque";
+      width: 78px;
+      height: 32px;
+      border-radius: 2px;
 
-      .schedule {
-        color: $base-font-color;
-        padding-top: 13px;
-
-        &::after {
-          content: " →";
-        }
-      }
-
-      .log-in {
-        background-color: $base-font-color;
-        border: none;
-        color: #fff;
-        font-family: "Basis Grotesque";
-        width: 78px;
-        height: 32px;
-        border-radius: 2px;
-
-        &::after {
-          content: " →";
-        }
+      &::after {
+        content: " ";
+        background-image: url("/chargebee-assignment/assets/icon/white-arrow.svg");
+        background-size: contain;
+        background-repeat: no-repeat;
+        position: relative;
+        padding: 0px 5px;
+        top: 4px;
+        left: 6px;
       }
     }
   }
+}
 
 @media screen and (min-width: 1024px) {
   .nav-bar {
@@ -102,6 +117,7 @@
       .schedule,
       .log-in {
         font-size: 14px;
+        font-weight: 500;
       }
     }
   }
