--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -1,44 +1,44 @@
 //Carousel Styles
 .carousel-inner {
   padding: 3rem;
-    h2 {
-      @include font($IBM-font, 500, 24px, 27px);
-    }
-  
-    h3 {
-      @include font($IBM-font, 500, 15px, 22px);
-      margin-top: 18px;
-    }
-  
-    img {
-      width: 80px;
-      left: 63%;
-    }
-  
-    span {
-      color: #8150c7;
-      font-size: 24px;
-    }
+  h2 {
+    @include font($IBM-font, 500, 24px, 27px);
   }
 
-  @media screen and (min-width: 1024px) {
-    .carousel-control-next-icon,
-    .carousel-control-prev-icon {
-      position: relative;
-      box-shadow: 0px 1px 4px 0px #000000;
-      background-size: 48%;
-      padding: 24px;
-      border-radius: 30px;
-    }
-  
-    .carousel-control-next-icon {
-      right: -12rem;
-      background-image: url(../assets/icon/next_icon.svg);
-    }
-  
-    .carousel-control-prev-icon {
-      left: -12rem;
-      background-image: url(../assets/icon/previous_icon.svg);
-    }
-  
+  h3 {
+    @include font($IBM-font, 500, 15px, 22px);
+    margin-top: 18px;
+    margin-bottom: 19px;
+  }
+
+  img {
+    width: 80px;
+    left: 63%;
+  }
+
+  span {
+    color: #8150c7;
+    font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .carousel-control-next-icon,
+  .carousel-control-prev-icon {
+    position: relative;
+    box-shadow: 0px 1px 4px 0px #000000;
+    background-size: 48%;
+    padding: 24px;
+    border-radius: 30px;
+  }
+
+  .carousel-control-next-icon {
+    right: -10rem;
+    background-image: url(../assets/icon/next_icon.svg);
+  }
+
+  .carousel-control-prev-icon {
+    left: -10rem;
+    background-image: url(../assets/icon/previous_icon.svg);
+  }
 }
