--- a/styles/components/_sliderBackground.scss
+++ b/styles/components/_sliderBackground.scss
@@ -1,36 +1,35 @@
 //Slider Background Styles
 .middle {
-    background-color: #fff;
-    box-shadow: 2px 4px 83px #e3e3e3;
-    font-family: $IBM-font;
-    z-index: 5;
-    width: 95%;
-    margin: 30px auto;
-  }
+  background-color: #fff;
+  box-shadow: 2px 4px 83px #e3e3e3;
+  font-family: $IBM-font;
+  z-index: 5;
+  width: 95%;
+  margin: 30px auto;
+}
 
 @media screen and (min-width: 450px) {
-    .middle {
-        width: 50%;
-        margin: auto;
-        margin-top: 35px;
-      }
+  .middle {
+    width: 50%;
+    margin: auto;
+    margin-top: 35px;
+  }
 }
 
 @media screen and (min-width: 900px) and (max-width: 1024px) {
-    .slider {
-      margin-left: 7rem !important;
-    }
+  .slider {
+    margin-left: 7rem !important;
   }
+}
 
 @media screen and (min-width: 1024px) {
-
-.slider {
+  .slider {
     display: flex;
     float: right;
     margin-left: 11rem;
     margin-top: 3rem;
     z-index: 0;
-    height: 91vh;
+    height: 89vh;
     background-image: url(../assets/sb-section-console.svg);
     background-repeat: no-repeat;
     background-size: 70%;
@@ -38,12 +37,12 @@
 
     .left,
     .right {
-      border-bottom: 309px solid #fff;
-      border-left: 45px solid transparent;
-      border-right: 50px solid transparent;
+      border-bottom: 294px solid #fff;
+      border-left: 54px solid transparent;
+      border-right: 54px solid transparent;
       filter: drop-shadow(5px -72px 62px #e3e3e399);
       height: 0;
-      width: 448px;
+      width: 474px;
     }
     .left {
       transform: rotate(90deg);
@@ -54,7 +53,7 @@
     .middle {
       width: 281px;
       height: 366px;
-      margin: -40px 0;
+      margin: -42px -37px;
     }
   }
 }
