--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -39,8 +39,8 @@ footer {
         margin: auto;
         flex-direction: row;
 
-        .btn-bgcolor {
-          margin-top: 19px;
+        .btn-signup {
+          margin-top: 0;
         }
       }
     }
@@ -50,7 +50,7 @@ footer {
 @media screen and (min-width: 1024px) {
   footer {
     height: 261px;
-    margin-top: 6rem;
+    margin-top: 110px;
 
     .footer {
       margin-left: 6rem;
@@ -62,6 +62,7 @@ footer {
 
       .main-buttons {
         flex-direction: row;
+        align-items: baseline;
       }
     }
   }
